//
// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package com.google.floody.protobuf;

import "protos/sheet_objects.proto";

// Model class to hold information on status of operation for the given Drive fileId.
message FileOperationResult {

  // Drive operation Status.
  enum Status {
    FAIL = 0;
    SUCCESS = 1;
    DRY_RUN = 2;
  }

  Status status = 1;
  FloodySheet spreadsheet_information = 2;
}

message FileOperationResultList {
  repeated FileOperationResult results = 1;
}

// UI request model to share spreadsheet with User/Groups.
message ShareSpreadsheetRequest {
  repeated string users = 1;
  repeated string groups = 2;
}
